# leaky_ledger

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  startup.sh
.devcontainer/: devcontainer.json  requirements.txt
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
leaky_ledger/: apps.py  fake_data.py  models.py  requirements.txt  urls.py
leaky_ledger/forms/: new_user.py
leaky_ledger/management/commands/: create_fake_users.py
leaky_ledger/migrations/: 0001_initial.py  0002_alter_transaction_date_of_transaction.py
leaky_ledger/static/leaky_ledger/css/: account.css  base.css  home.css
leaky_ledger/static/leaky_ledger/js/: account.js  home.js
leaky_ledger/templates/leaky_ledger/: account.html  accounts.html  base.html  home.html  register.html
leaky_ledger/views/: account.py  accounts.py  external_transfer.py  home.py  internal_transfer.py  login.py  register.py  user_lookup.py
leaky_ledger_bank_and_company/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile.nginx  nginx.conf
